# Engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/shaders/cwbvh/wgsl/: cwbvh.wgsl  cwbvhTrace.wgsl  mortonCodes.wgsl
assets/shaders/graph/wgsl/: match.wgsl  match_utils.wgsl  permutation.wgsl
assets/shaders/hlbvh/wgsl/: hlbvh.wgsl  hlbvh_to_bvh8.wgsl  hlbvhtrace.wgsl
assets/shaders/renderer/wgsl/: fragment.wgsl  line.wgsl  vertex.wgsl
assets/shaders/scan/spirv/: prefix_scan.spirv  prefix_scan.spirv.debug
assets/shaders/scan/wgsl/: prefix_scan.wgsl  prefix_scan_decoupled_look_back_fallback.wgsl
assets/shaders/sort/spirv/: radixsort.spirv  radixsort.spirv.debug
assets/shaders/sort/wgsl/: onesweep.wgsl  radixsort.wgsl  radixsort2.wgsl
cmake/: HLSL2SpirV.cmake  WGSL2SpirV.cmake
cmake/modules/: FindD3D12.cmake
samples/: CMakeLists.txt
samples/computeAdd/: ComputeAddSample.cmake  ComputeAddSample.cpp
samples/computeAdd/shaders/: addCompute.hlsl
samples/triangle/: TriangleSample.cmake  TriangleSample.cpp
samples/triangle/shaders/: fragment.hlsl
scripts/: hlsl2spirv.py  spirv2hlsl.py  wgsl2hlsl.py  wgsl2spirv.py  wgsl_pp.py
src/: main._  main.cpp
src/algorithm/: bit.hpp  crc32.cpp  crc32.hpp  string.cpp
src/async/: AsyncManager.cpp  AsyncManager.hpp  Fiber.cpp  Fiber.hpp  Fiberpool.cpp  Fiberpool.hpp  Job.cpp  Job.hpp  Profile.cpp  Profile.hpp  Stack.hpp  ThreadCache.hpp  async.hpp
src/core/: color.hpp  event.hpp  print.cpp  print.hpp
src/datastructure/: AtomicLock.hpp  BoundedTaggedRectTreap.hpp  ConcurrentBoundedDictionary.hpp  ConcurrentEpochGarbageCollector.hpp  ConcurrentHashMap.hpp  ConcurrentLinkedList.hpp  ConcurrentMap.hpp  ConcurrentPriorityQueue.hpp  ConcurrentQueue.hpp  ConcurrentSkipListMap.hpp  ConcurrentSortedList.hpp  ConcurrentStack.hpp  ConcurrentTimestampGarbageCollector.hpp  ConcurrentUnorderedSkipListMap.hpp  ConcurrentVector.hpp  HazardPointer.hpp  MarkedAtomicPointer.hpp  TaggedInternvalTree.hpp  ThreadLocalStorage.hpp
src/jobsystem/: Job.cpp  Job.hpp  Stack.hpp  ThreadCache.hpp  fiber.cpp  fiber.hpp  fiberpool.cpp  fiberpool.hpp  jobsystem.cpp  jobsystem.hpp  promise.hpp
src/jobsystem/fiber/: fiber.cpp  fiber.hpp  fiberpool.cpp  fiberpool.hpp
src/lib/: time.hpp  vector.hpp
src/lib/algorithm/: random.hpp  search.hpp  sort.hpp  string.hpp
src/lib/algorithm/parallel/: HazardManager.hpp
src/lib/allocator/: FixedBufferAllocator.hpp  systemallocator.cpp  systemallocator.hpp
src/lib/datastructure/: ConcurrentLinkedList.hpp  ConcurrentLookupTable.hpp  ConcurrentPriorityQueue copy._hpp  ConcurrentPriorityQueue.hpp  ConcurrentPriorityQueuettt.hpp  ConcurrentPriorityQueuetttt.hpp  ConcurrentQueue.hpp  ConcurrentStack.hpp  ConcurrentTimestampGarbageCollector.hpp  ConcurrentVector.hpp  FlatMap.hpp  HazardPointer.hpp  ThreadLocalStorage.hpp  Vector.hpp  _ConcurrentQueue.hpp
src/lib/datastructure/utils/: HazardPointer.hpp  HazardPointerGlobalRecord.hpp
src/lib/memory/: SystemMemoryManager.cpp  SystemMemoryManager.hpp
src/lib/memory/allocator/: BoundedHeapAllocator.hpp  SystemAllocator.hpp
src/lib/parallel/: linearqueue.hpp  priorityqueue.hpp  queue.hpp  vector.hpp
src/lib/time/: TimeSpan.hpp
src/memory/: SystemMemoryManager.cpp  SystemMemoryManager.hpp
src/memory/allocator/: SystemAllocator.hpp
src/os/: File.cpp  File.hpp  Logger.cpp  Logger.hpp  Thread.cpp  Thread.hpp  hqos.hpp  print.cpp  print.hpp
src/rendering/: rendering.hpp
src/rendering/gpu/: EventLoop.hpp  RHI.hpp  RenderGraph.cpp  RenderGraph.hpp  ResourceDatabase.hpp  Types.cpp  Types.hpp
src/rendering/mesh/: MeshSimplifierQEM.hpp
src/rendering/rendergraph/: RenderGraph.hpp
src/rendering/rhi/: rhi.cpp  rhi.hpp
src/rendering/rhi/vulkan/: vulkan.cpp  vulkan.hpp
src/rhi/: BufferAllocator.cpp  BufferAllocator.hpp  Device.cpp  Device.hpp  EventLoop.hpp  GPUHeap.cpp  GPUHeap.hpp  rhi.cpp  rhi.hpp
src/rhi/imp/vulkan/: vulkan.cpp  vulkan.hpp
src/rhi/vulkan/: VulkanDevice.cpp  VulkanDevice.hpp  vulkan.cpp  vulkan.hpp
src/window/: window.cpp  window.hpp
src/window/sdl3/: SDL3Window.cpp  SDL3Window.hpp  window_sdl3.cpp  window_sdl3.hpp
tests/: CMakeLists.txt
tests/async/: AsyncManagerTests.cmake  AsyncManagerTests.cpp  AsyncTests.cmake  AsyncTests.cpp  JobTests.cpp  ThreadCacheTests.cmake  ThreadCacheTests.cpp
tests/datastructures/: ConcurrentBoundedDictionary.cmake  ConcurrentBoundedDictionary.cpp  ConcurrentEpochGarbageCollectorTests.cmake  ConcurrentEpochGarbageCollectorTests.cpp  ConcurrentHashMapTests.cmake  ConcurrentHashMapTests.cpp  ConcurrentLinkedListTests.cmake  ConcurrentLinkedListTests.cpp  ConcurrentListTests.cmake  ConcurrentListTests.cpp  ConcurrentPriorityQueueTests.cmake  ConcurrentPriorityQueueTests.cpp  ConcurrentQueueTests.cmake  ConcurrentQueueTests.cpp  ConcurrentSkipListMapTests.cmake  ConcurrentSkipListMapTests.cpp  ConcurrentSortedListTests.cmake  ConcurrentSortedListTests.cpp  ConcurrentStackTests.cpp  ConcurrentUnorderedSkipListMapTests.cmake  ConcurrentUnorderedSkipListMapTests.cpp  FlatMapTests.cpp  ThreadLocalStorageTests.cmake  ThreadLocalStorageTests.cpp
tests/jobsystem/: JobSystemTests.cmake  JobSystemTests.cpp  JobTests.cmake  JobTests.cpp  ThreadCacheTests.cpp
tests/lib/: CPQ.cmake  CPQ.cpp  ConcurrentListTests.cpp  ConcurrentLookupTableTests.cmake  ConcurrentLookupTableTests.cpp  ConcurrentPriorityQueueTests.cpp  ConcurrentQueueTests.cpp  ConcurrentStackTests.cmake  ConcurrentStackTests.cpp  FlatMapTests.cmake  FlatMapTests.cpp  ThreadLocalStorageTests.cpp
tests/rendering/: ComputeAddTests.cmake  ComputeAddTests.cpp  ComputeSort2Tests.cmake  ComputeSort2Tests.cpp  ComputeSortTests.cmake  ComputeSortTests.cpp  RenderGraphTests.cmake  RenderGraphTests.cpp  SortTests.cmake  SortTests.cpp  TriangleExample.cmake  TriangleExample.cpp
tests/rhi/: BufferAllocatorTests.cmake  BufferAllocatorTests.cpp  EventLoopTests.cmake  EventLoopTests.cpp  GPUHeapTests.cmake  GPUHeapTests.cpp
wgslc-naga/: Cargo.toml  install.bat  install.ps1  install.sh
wgslc-naga/src/: main.rs
(+7 files in other folders)
